# cf-empty-email

./: .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
bruno/: Create DKIM Records.bru  Create DMARC Records.bru  Create MX Records.bru  Create SPF Records.bru  Delete Record.bru  List All Zones.bru  List DNS Records.bru  bruno.json  collection.bru
bruno/environments/: Cloudflare.bru
cf_empty_email/: __main__.py  app.py
postings/: list-dns-records.posting.yaml  list-zones.posting.yaml
postings/scripts/: zone_id_on_response.py
tests/: test_app.py
