[project]
name = "cf-empty-email"
version = "0.1.2"
description = "Python script to create null email DNS records for domains managed by Cloudflare."
readme = "README.md"
authors = [
    { name = "Jon Mark Allen", email = "ubahmapk@proton.me" }
]
keywords = ["cloudflare", "dns", "email", "null"]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic[email]>=2.10.4",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security",
    "Topic :: Utilities",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.11",
    "hatchling>=1.27.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
    "vermin>=1.6.0",
]

[project.urls]
Repository = "https://github.com/ubahmapk/cf-empty-email.git"
Issues = "https://github.com/ubahmapk/cf-empty-email/issues"

[project.scripts]
cf-empty-email = "cf_empty_email.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
